// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow multiple properties 1`] = `
Array [
  Array [
    Object {
      "a": 0,
    },
    Object {
      "b": 0,
    },
  ],
  Array [
    Object {
      "a": 4,
    },
    Object {
      "b": 1,
    },
  ],
  Array [
    Object {
      "a": 8,
    },
    Object {
      "b": 2,
    },
  ],
  Array [
    Object {
      "a": 16,
    },
    Object {
      "b": 4,
    },
  ],
  Array [
    Object {
      "a": 32,
    },
    Object {
      "b": 8,
    },
  ],
  Array [
    Object {
      "a": 64,
    },
    Object {
      "b": 16,
    },
  ],
]
`;

exports[`should scale sizes properly 1`] = `
Array [
  Array [
    Object {
      "a": 0,
    },
  ],
  Array [
    Object {
      "a": 4,
    },
  ],
  Array [
    Object {
      "a": 8,
    },
  ],
  Array [
    Object {
      "a": 16,
    },
  ],
  Array [
    Object {
      "a": 32,
    },
  ],
  Array [
    Object {
      "a": 64,
    },
  ],
]
`;
